@@ -51,7 +51,8 @@ namespace Jack
 #endif
 
             bool Init();
-            void Restart();
+            void FreeAll();
+            
             int AllocPorts();
             int FreePorts();
 
@@ -71,10 +72,7 @@ namespace Jack
             int Open ( jack_nframes_t frames_per_cycle, jack_nframes_t rate, bool capturing, bool playing,
                        int inchannels, int outchannels, bool monitor, const char* capture_driver_name,
                        const char* playback_driver_name, jack_nframes_t capture_latency, jack_nframes_t playback_latency );
-
-#ifdef JACK_MONITOR
             int Close();
-#endif
 
             int Attach();
             int Detach();
